<resources>
    <string name="app_name">Konselorku</string>
    <string name="title_home">HOME</string>
    <string name="title_guru">GURU</string>
    <string name="title_lapor">LAPOR</string>
    <string name="title_penilaian">PENILAIAN</string>
    <string name="title_profil">PROFIL</string>
    <string name="desc_survey">Adalah platform aplikasi konseling yang bertujuan untuk memfasilitasi siswa dan konselor untuk mengoptimalkan penggunaan layanan bimbingan dan konseling dimanapun dan kapanpun.\n\n\n\nDosen Pembimbing:\nSiti Aminah, M.Pd.\n\nDibuat Oleh:\nLintang Robbani\nM. Nur Chozin\nAndri Muhyidin</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="lorem_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lost_title">No Internet Connection</string>
    <string name="lost_desc">Looks like connection has lost.\n Tap to retry.</string>
    <string name="komentar">Comments</string>
    <string name="tulis_komentar">Type your text here....</string>
</resources>
